--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDC Chatbot</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="Black And White Modern Typographic Simple Virus Apparel Logo.png">
 </head>
 <body>
     <div class="chat-container">
